# oauth-to-aws-console

./: .gitignore  README.md  app.py  build.sh  pyproject.toml
tests/: test_app.py
